Fix URL encoding in buildUrl() and correct README inaccuracies
Use the multi-argument URI constructor in BaseResource.buildUrl() so that
unsafe characters in filter values (e.g. <, >) are percent-encoded while
structural query characters (&, =, !=) are preserved. URLEncoder.encode()
on the full query string was incorrectly encoding structural delimiters.

Update tests to assert raw (decoded) query parameter values, since the
encoding now happens at the URI construction level rather than in the
filter layer.

Also fix README: correct demo main class package (main, not demo),
project structure tree, and DESIGN.md link casing.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>